# wbor-studio-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  counting_seconds.md  msd.md  msg.md  s.bash  things.md
.github/workflows/: rust.yml
assets/: api_keys_template.json  app_config.json  delete_twilio_msgs.bash  env_template.json  nathan.psd
scripts/: communicate_with_dashboard.sh  delete_twilio_msgs.bash  delete_twilio_msgs.sh  run_dashboard.sh  trigger_surprise.bash  trigger_surprise.sh  trigger_twilio_update.sh
src/: dynamic_optional.rs  hierarchal_window_defs.rs  main.rs  request.rs  spinitron.rs  texture.rs  tips.txt  vec2f.rs  window_hierarchy.rs  window_tree.rs  window_tree_defs.rs
src/dashboard_defs/: clock.rs  credit.rs  dashboard.rs  easing_fns.rs  error.rs  funky_remake_transitions.rs  mod.rs  shared_window_state.rs  spinitron.rs  streaming_server_status.rs  surprise.rs  twilio.rs  updatable_text_pattern.rs  weather.rs
src/dashboard_defs/themes/: barebones.rs  mod.rs  retro_room.rs  shared_utils.rs  standard.rs  the_room.rs
src/spinitron/: api.rs  api_key.rs  mod.rs  model.rs  state.rs  wrapper_types.rs
src/texture/: mod.rs  pool.rs  subpool_manager.rs  text.rs
src/utility_types/: api_history_list.rs  continually_updated.rs  dynamic_optional.rs  file_utils.rs  generic_result.rs  ipc.rs  json_utils.rs  mod.rs  thread_task.rs  time.rs  update_rate.rs  vec2f.rs
src/utils/: api_history_list.rs  continually_updated.rs  dynamic_optional.rs  file_utils.rs  hash.rs  ipc.rs  mod.rs  request.rs  time.rs  vec2f.rs
src/window_tree_defs/: clock.rs  dashboard.rs  error.rs  mod.rs  shared_window_state.rs  spinitron.rs  twilio.rs  weather.rs  window_tree_defs.rs
