[package]
name = "wbor-studio-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.35.2", features = ["image", "ttf"]}
minreq = {version = "2.10.0", features = ["https"]}

# Working with JSON:
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

# Useful datatypes:
regex = {version = "1.10.3"}
base64 = {version = "0.21.7"}
chrono = {version = "0.4.35"}

# To make life easier:
derive-alias = {version = "0.1.0"}
lazy_static = {version = "1.4.0"}

# Logging:
log = {version = "0.4"}
env_logger = {version = "0.11.3"}

[build-dependencies]
pkg-config = "0.3"
