[package]
name = "wbor-studio-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "2.1.1"
sdl2 = {version = "0.35.2", features = ["image", "ttf"]}
minreq = {version = "2.10.0", features = ["https"]}

# Working with JSON:
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

# Useful datatypes:
rand = "0.8.5"
regex = "1.10.3"
base64 = "0.21.7"
chrono = "0.4.35"
anyhow = {version = "1.0", features = ["backtrace"]}

# To make life easier:
lazy_static = "1.4.0"
derive-alias = "0.1.0"

# Logging:
log = "0.4"
env_logger = "0.11.3"

[build-dependencies]
pkg-config = "0.3"
