[package]
name = "wbor-studio-dashboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "2.1.1"
sdl2 = {version = "0.37.0", features = ["image", "ttf", "gfx"]}

# Async stuff:
futures = "0.3.30"
reqwest = {version = "0.12.8", features = ["json"]}
tokio = {version = "1.40.0", features = ["macros", "fs", "process", "rt-multi-thread"]}

# Working with JSON:
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

# Useful datatypes:
rand = "0.8.5"
regex = "1.10.3"
base64 = "0.21.7"
chrono = {version = "0.4.38", features = ["serde"]}
anyhow = {version = "1.0", features = ["backtrace"]}

# To make life easier:
lazy_static = "1.4.0" # TODO: replace with `once_cell` at some point
derive-alias = "0.1.0"

# Logging:
log = "0.4"
env_logger = "0.11.3"

[build-dependencies]
pkg-config = "0.3"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ["cfg(kani)"]}
